--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,24 +1,52 @@
+# Node dependencies
+node_modules/
+
+# Build outputs
+client/dist/
+client/.vite/
+server/dist/
+dist/
+dist-ssr/
+build/
+
+# Vite / dev
+.vite/
+
+# Environment & config
+.env
+.env.local
+.env.*.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+*.log
+logs/
+*.pid
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
+# Editor / OS junk
+.vscode/
 !.vscode/extensions.json
-.idea
-.DS_Store
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
-*.sw?
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Python virtual environment (optional)
+venv/
+__pycache__/
+
+# Misc
+*.tgz
+*.bak
+*.tmp
+*.local
+
